--- a/src/main/webapp/app/features/meals/meals.page.html
+++ b/src/main/webapp/app/features/meals/meals.page.html
@@ -1,4 +1,4 @@
-<app-status-bar appStatusBarAware>
-  <app-timer></app-timer>
-</app-status-bar>
-<app-layout></app-layout>
+<jhi-status-bar appStatusBarAware>
+  <jhi-recipe-timer></jhi-recipe-timer>
+</jhi-status-bar>
+<jhi-layout></jhi-layout>
