--- a/src/main/webapp/app/features/heroes/heroes.page.html
+++ b/src/main/webapp/app/features/heroes/heroes.page.html
@@ -1,5 +1,5 @@
 <jhi-welcome></jhi-welcome>
-
+<jhi-twain-quote></jhi-twain-quote>
 <nav>
   <a routerLink="/features/heroes/admin" routerLinkActive="active">Admin</a>
   <a routerLink="/features/heroes/dashboard" routerLinkActive="active">Dashboard</a>
